# key-bind-using-whisper

./: config.yaml  crypto_model.py  dataloader.py  main.py  pyproject.toml  train.py  utils.py
